# pauliengine

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  PauliString.h  QubitHamiltonian.cpp  README.md  conan_profile  conanfile.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh  postStartCommand.sh
.github/workflows/: deploy.yml
PauliEngine Tests/tests/: PauliEngine.cp312-win_amd64.pyd  plot_all_imp.py
cmake/compiler_flags/: CXXFlags.cmake  Clang.CXX.cmake  GNU.CXX.cmake  Intel.CXX.cmake  MSVC.CXX.cmake
cmake/custom/: blis.cmake  cblas-lapacke.cmake  math.cmake  mkl.cmake  openblas.cmake
include/PauliEngine/: Info.h
include/pauliengine/: Info.h.in  PauliString.h  QubitHamiltonian.h
src/: CMakeLists.txt  PauliString.h  PauliString_test.cc  QubitHamiltonian.cpp  QubitHamiltonian.h  example.cpp
src/bindings/: CMakeLists.txt  bindings.cpp
src/pauliengine/: __init__.py  _version.py  pauli_string.py  qubit_hamiltonian.py
tests/: test_package.py  test_pauli_string.py  test_qubit_hamiltonian.py
tools/: install-deps.sh
tools/benchmarks/: README.md  __init__.py  benchmark.py  compare.py  generate.py  hardware.py  plot.py  run.py
