[build-system]
requires = ["nanobind", "scikit-build-core>=0.11", "setuptools-scm>=8", "conan"]
build-backend = "scikit_build_core.build"

[project]
name = "pauliengine"

description = "TDA."
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "numpy",
]

[dependency-groups]
# test = ["pytest>=8.2.2,<9.0", "pytest-datadir"]
test = ["pytest"]
dev = ["coverage", "pre-commit>=3", "ruff==0.14.4", { include-group = "test" }]
interactive = [
  "ipykernel>=6.25",
  "matplotlib>=3",
  "pydot>=1.4",
  "tqdm>=4.65.0",
  "pylatexenc",
]
# TODO Sphinx+Breathe


[tool.uv]
python-preference = "only-managed"
keyring-provider = "subprocess"
cache-keys = [
  { file = "pyproject.toml" },
  { file = "include/**/*.h" },
  { file = "src/**/*.{hpp,cpp}" },
  { file = "CMakeLists.txt" },
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"


[tool.scikit-build]
# protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"
# setuptools-style build caching in a local directory
build-dir = "build"
# build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
logging.level = "INFO"
# read CMake version from CMakeLists.txt
cmake.version = "CMakeLists.txt"
cmake.build-type = "Release"
cmake.args = [
  "-DCMAKE_TOOLCHAIN_FILE=build/conan_toolchain.cmake",
]
ninja.make-fallback = false
sdist.exclude = [
  ".clang-format",
  ".clang-tidy",
  ".copier-answers.yml",
  ".devcontainer",
  ".gersemirc",
  ".github",
  ".gitignore",
  ".pre-commit-config.yaml",
  ".prettierignore",
  ".vscode",
  "cspell.json",
  "sandbox",
  "tests/cpp",
]
sdist.include = ["src/pauliengine/_version.py"]
build.verbose = true

# Platform-specific build configuration
[[tool.scikit-build.overrides]]
if.platform-system = "linux"
build.tool-args = ["-j8"]

[[tool.scikit-build.overrides]]
if.platform-system = "darwin"
build.tool-args = ["-j8"]

[[tool.scikit-build.overrides]]
if.platform-system = "windows"
build.tool-args = ["/m:8"]


[tool.setuptools_scm]
write_to = "src/pauliengine/_version.py"


[tool.pytest.ini_options]
minversion = "8.0"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_date_format = "%Y%m%d %H:%M:%S"
addopts = [
  "--import-mode=importlib",
  "-ra",
  "--showlocals",
  "--strict-markers",
  "--strict-config",
]
pythonpath = ["."]
testpaths = ["tests"]
# required_plugins = ["pytest-datadir"]

[tool.coverage]
run.source = ["src/pauliengine"]
relative_files = true
omit = ["src/pauliengine/_version.py"]

[tool.coverage.report]
omit = ["src/pauliengine/_version.py"]
exclude_also = [
  '\.\.\.',
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG:",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
  "if (typing\\.)?TYPE_CHECKING:",
  "@jit\\(",
  "@njit\\(",
  '^\s*\.\.\.',
  "logger =",
  "logger\\.",
  "return NotImplemented",
  "@overload",
]


[tool.ruff]
# for the default settings, see: https://docs.astral.sh/ruff/configuration/#configuring-ruff

exclude = ["docs", "src/pauliengine/_version.py", "tools/container"]

target-version = "py311"

[tool.ruff.format]
# enable auto-formatting of code examples in docstrings
docstring-code-format = true

# set the line length limit used when formatting code snippets in
# docstrings
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
extend-select = [
  "A",      # flake8-builtins
  "ANN",    # flake8-annotations
  "ARG",    # flake8-unused-arguments
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "C90",    # mccabe
  "D",      # pydocstyle
  "E",
  "W",      # pycodestyle
  "ERA",    # eradicate
  "EXE",    # flake8-executable
  "FBT",    # flake8-boolean-trap
  "FLY",    # flynt
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "INP",    # flake8-no-pep420
  "ISC003", # flake8-implicit-str-concat: explicit-string-concatenation (other rules conflict with the formatter)
  "N",      # pep8-naming
  "NPY",    # NumPy-specific rules
  "PERF",   # perflint
  "PIE",    # flake8-pie
  "PLC",    # pylint convention
  "PLE",    # pylint error
  "PLR",    # pylint refactor
  "PLW",    # pylint warning
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific rules
  "S",      # flake8-bandit
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slot
  "T20",    # flake8-print
  "TCH",    # flake8-type-checking
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
  "TRY",    # tryceratops
]

ignore = [
  "D206",    # indent-with-spaces: enforced by the formatter
  "E111",    # indentation-with-invalid-multiple: enforced by the formatter
  "E114",    # indentation-with-invalid-multiple-ment: enforced by the formatter
  "E117",    # over-indented: enforced by the formatter
  "N803",    # pep8-naming: "argument name should be lowercase"
  "N806",    # pep8-naming: "variable in function should be lowercase"
  "PLR0913", # pylint refactor: "too many arguments to function call"
  "PLR0915", # pylint refactor: "too many statements"
  "PLR2004", # pylint refactor: "magic value used in comparison"
  "TRY003",  # tryceratops: "Avoid specifying long messages outside the exception class"
  "W191",    # tab-indentation: enforced by the formatter
]

# do not attempt autofix with `--fix` for the following rules
unfixable = [
  "ERA",  # removes commented-out code
  "F401", # removes unused imports
  "F841", # removes unused variables
  "T20",  # removes print statements
]

# allow unused variadic arguments, like *args and **kwargs.
flake8-unused-arguments.ignore-variadic-names = true
flake8-annotations.allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
# ignore for contents of `tests`:
# - S101 (flake8-bandit `AssertUsed`),
# - D (pydocstyle)
# - C901 (mccabe)
# - INP001 (flake8-no-pep420)
# - E721 (type-comparison)
"tests/*" = ["S101", "D", "C901", "INP001", "E721"]
# ignore for all `test_*.py` files
# - ANN (flake8-annotations)
# - I002 (isort required import)
"tests/**/test_*.py" = ["ANN", "I002"]
# ignore I002 (isort required import) for all `__init__.py` files
"src/pauliengine/**/__init__.py" = ["I002"]

[tool.ruff.lint.pycodestyle]
# maximum line length to allow for line-length violations within documentation,
# including standalone comments
max-doc-length = 140
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]


[tool.pyright]
pythonVersion = "3.11"

include = ["src/pauliengine/**/*.py"]

exclude = ["test_*.py", "docs/**", "**/__pycache__", "tools/container/**"]

typeCheckingMode = "basic"
useLibraryCodeForTypes = true

reportGeneralTypeIssues = "information"
reportMissingImports = true
reportMissingTypeStubs = "warning"
reportImportCycles = "information"
reportPrivateUsage = "information"
reportPrivateImportUsage = "information"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryCast = "information"
reportUnnecessaryComparison = "information"
reportUnnecessaryContains = "information"
reportUnnecessaryTypeIgnoreComment = "information"
reportMatchNotExhaustive = "information"
